<resources>

    <!-- Test -->
    <string name="test">Test</string>

    <!-- Application Name -->
    <string name="app_name">简单书影</string>

    <!-- Main Activity -->
    <string name="main_tab_book">书籍</string>
    <string name="main_tab_movie">影视</string>
    <string name="main_tab_user">用户</string>

    <!-- Login -->
    <string name="login">登录</string>
    <string name="login_first">请先登录</string>

    <!-- Book Detail -->
    <string name="book_detail_title">书籍详情</string>

    <!-- Movie Detail -->
    <string name="movie_detail_title">影视详情</string>

    <!-- Search -->
    <string name="search_type_book">书籍</string>
    <string name="search_type_movie">影视</string>

    <!-- User Fragment -->
    <string name="user_name">昵称</string>
    <string name="user_head">头像</string>
    <string name="user_location">地点</string>
    <string name="user_signature">签名</string>
    <string name="user_description">描述</string>
    <string name="user_settings">设置</string>
    <string name="user_location_hint">用户所在地点</string>
    <string name="user_signature_hint">用户个人签名</string>
    <string name="user_description_hint">用户自身描述</string>

    <!-- Setting Activity -->
    <string name="settings_title">设置</string>
    <string name="settings_logout">登出</string>
    <string name="settings_about">关于</string>
    <string name="settings_about_content">发了大家都是佛啊手机的</string>

</resources>
