<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.kyletung.simplebookmovie.view.RectLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/base_color_white"
            android:elevation="@dimen/base_dimen_2dp"
            app:scaleHeight="9"
            app:scaleOrientation="vertical"
            app:scaleWidth="16">

            <ImageView
                android:id="@+id/user_head_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.kyletung.simplebookmovie.view.CircleImageView
                    android:id="@+id/user_head"
                    android:layout_width="@dimen/user_head_image"
                    android:layout_height="@dimen/user_head_image"
                    app:border_color="@color/base_color_white"
                    app:border_width="@dimen/base_dimen_2dp"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_4dp"
                    android:textColor="@color/base_color_white"
                    android:textSize="@dimen/base_text_24sp"/>

            </LinearLayout>

        </com.kyletung.simplebookmovie.view.RectLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_dimen_16dp"
            app:cardElevation="@dimen/base_dimen_2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/base_dimen_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_location"
                    android:textColor="@color/base_color_black"
                    android:textSize="@dimen/base_text_16sp"/>

                <TextView
                    android:id="@+id/user_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_location_hint"
                    android:textColor="@color/base_color_gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_4dp"
                    android:text="@string/user_signature"
                    android:textColor="@color/base_color_black"
                    android:textSize="@dimen/base_text_16sp"/>

                <TextView
                    android:id="@+id/user_signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_signature_hint"
                    android:textColor="@color/base_color_gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_dimen_4dp"
                    android:text="@string/user_description"
                    android:textColor="@color/base_color_black"
                    android:textSize="@dimen/base_text_16sp"/>

                <TextView
                    android:id="@+id/user_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_description_hint"
                    android:textColor="@color/base_color_gray"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_dimen_16dp"
            android:layout_marginTop="@dimen/base_dimen_16dp"
            app:cardElevation="@dimen/base_dimen_2dp">

            <LinearLayout
                android:id="@+id/setting_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/base_dimen_8dp">

                <ImageView
                    android:layout_width="@dimen/base_dimen_24dp"
                    android:layout_height="@dimen/base_dimen_24dp"
                    android:layout_marginLeft="@dimen/base_dimen_8dp"
                    android:layout_marginRight="@dimen/base_dimen_8dp"
                    android:src="@drawable/setting_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_settings"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>